Added a menu and stuff

--- a/style.css
+++ b/style.css
@@ -1,25 +1,187 @@
+html{
+  height: 91%;
+  width: 99%;
+}
+
 body {
   background-image:url("https://placekitten.com/1920/1080");
   color: white;
   font-family: system-ui;
+
+  height: 100%;
+  width: 100%;
+}
+
+main{
+  height: 90%;
+  width: 100%;
+
+  overflow:scroll;
 }
 
 h1 {
   color: aquamarine;
 }
 
-small{
+header{
+  height:150px;
+  width: 100%;
+  background-color: grey;
+
+  flex-flow:wrap;
+}
+
+header .button{
+  background-color: red;
+
+  width:240px;
+  line-height:160px;
+  height:100%;
+
+  display: flex;
+  align-items: center;
   justify-content: center;
+  text-align: center;
+
+  display: inline-block;
+}
+
+header .button:hover{
+  background-color: blue;
+
+  width:240px;
+  line-height:160px;
+  height:100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  display: inline-block;
+}
+
+header .fill{
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
+
+header #home{
+  background-image:url("resources/ButtonHome.png");
+  background-repeat: no-repeat;
+  background-size: 240px 160px;
+}
+
+header #home:hover{
+  background-image:url("resources/ButtonHomeHover.png");
+  background-repeat: no-repeat;
+  background-size: 240px 160px;
+}
+
+header #homeCurrent{
+  background-image:url("resources/ButtonHomeCurrent.png");
+  background-repeat: no-repeat;
+  background-size: 240px 160px;
+}
+
+header #homeCurrent:hover{
+  background-image:url("resources/ButtonHomeHover.png");
+  background-repeat: no-repeat;
+  background-size: 240px 160px;
+}
+
+header #about{
+  background-image:url("resources/ButtonAbout.png");
+  background-repeat: no-repeat;
+  background-size: 240px 160px;
+}
+
+header #about:hover{
+  background-image:url("resources/ButtonAboutHover.png");
+  background-repeat: no-repeat;
+  background-size: 240px 160px;
+}
+
+header #aboutCurrent{
+  background-image:url("resources/ButtonAboutCurrent.png");
+  background-repeat: no-repeat;
+  background-size: 240px 160px;
+}
+
+header #aboutCurrent:hover{
+  background-image:url("resources/ButtonAboutHover.png");
+  background-repeat: no-repeat;
+  background-size: 240px 160px;
+}
+
+header .fill:hover{
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
+
+.MainBox{
+  height:750px;
+  width:55%;
+  margin-left: 5%;
+  margin-top: 1%;
+
+  margin-right: 100px;
+
+  background-color: green;
+
+  text-align: center;
+
+  display: flex;
+  display: inline-block;
+  vertical-align:top;
+}
+
+.sidebar{
+  height:750px;
+  width:30%;
+  margin-top: 1%;
+
+  background-color: green;
+
+  text-align: center;
+
+  display:inline-block;
+  vertical-align:top;
+}
+
+a{
+  color:black;
+  text-decoration: none;
+}
+
+.header{
+  height:150px;
+  width: 50%;
+  background-color: white;
+}
+
+footer{
+  width:100%;
+  height:50px;
+}
+small{
+  text-align: center;
 }
 
 table{
   background-color: white;
-  assign-content:center;
   justify-content: center;
 }
 
 table, th, td {
     border: 1px solid black;
+    color:blue;
+
+    margin-left: 44%;
 }
 
 td{
