--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ html{
 }
 
 body {
-  background-image:url("https://placekitten.com/1920/1080");
-  color: white;
+  background: linear-gradient(#e66465, #9198e5);  color: white;
   font-family: system-ui;
 
   height: 100%;
@@ -16,7 +15,8 @@ main{
   height: 90%;
   width: 100%;
 
-  overflow:scroll;
+  overflow-y:scroll;
+  overflow-x:hidden;
 }
 
 h1 {
@@ -26,9 +26,13 @@ h1 {
 header{
   height:150px;
   width: 100%;
-  background-color: yellow;
+  background-color: grey;
 
   flex-flow:wrap;
+
+  border-width: 5px;
+  border-color: black;
+  border-style: dashed;
 }
 
 header .button{
@@ -44,6 +48,10 @@ header .button{
   text-align: center;
 
   display: inline-block;
+
+  border-width: 1px;
+  border-color: black;
+  border-style:double;
 }
 
 header .button:hover{
@@ -131,13 +139,17 @@ header .fill:hover{
 
   margin-right: 100px;
 
-  background-color: green;
+  background-color: grey;
 
   text-align: center;
 
   display: flex;
   display: inline-block;
   vertical-align:top;
+
+  border-width: 5px;
+  border-color: black;
+  border-style:dashed;
 }
 
 .sidebar{
@@ -145,7 +157,11 @@ header .fill:hover{
   width:30%;
   margin-top: 1%;
 
-  background-color: green;
+  border-width: 5px;
+  border-color: black;
+  border-style: dashed;
+
+  background-color: grey;
 
   text-align: center;
 
@@ -167,9 +183,12 @@ a{
 footer{
   width:100%;
   height:50px;
+
+  color: black;
+
+  text-align: center;
 }
 small{
-  text-align: center;
 }
 
 table{
